04-deploy-w-metrics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaniko-app
  namespace: test-build
  labels:
    app: kaniko-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaniko-app
  template:
    metadata:
      labels:
        app: kaniko-app
    spec:
      containers:
        - name: flask-app
          image: opensourcerero/kaniko-app:latest
          ports:
            - containerPort: 80
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config
              subPath: nginx.conf
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - '-nginx.scrape-uri=http://127.0.0.1/status'
          ports:
            - containerPort: 9113
              name: http-metrics
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
