04-deploy-w-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaniko-app-service
  namespace: test-build
  labels:
    app: kaniko-app
spec:
  selector:
    app: kaniko-app
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
