04-deploy-w-metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaniko-app-ingress
  namespace: test-build
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaniko-app-service
                port:
                  number: 80
